// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jobutil > all > matches job 1`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    [],
  ],
}
`;

exports[`jobutil > all > matches job 2`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    [
      WorkElement {
        "__handle": [Function],
        "__input": [
          {
            "func": [Function],
            "name": "returnhi",
            Symbol(workelement.slugify): [Function],
          },
        ],
      },
    ],
  ],
}
`;

exports[`jobutil > all > matches job 3`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    [
      WorkElement {
        "__handle": [Function],
        "__input": [
          {
            "content": "{}",
            Symbol(workelement.slugify): [Function],
          },
        ],
      },
    ],
  ],
}
`;

exports[`jobutil > call > matches job 1`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    {
      "func": [Function],
      "name": "returnhi",
      Symbol(workelement.slugify): [Function],
    },
  ],
}
`;

exports[`jobutil > call > matches job 2`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    {
      "func": [Function],
      "name": "JSON.parse",
      Symbol(workelement.slugify): [Function],
    },
    {
      "content": "{}",
      Symbol(workelement.slugify): [Function],
    },
  ],
}
`;

exports[`jobutil > func 1`] = `
SlugBase {
  Symbol(workelement.slug): "func#returnhi#md5#kW2db_QbhZ_M_Pk9SSOeYw",
}
`;

exports[`jobutil > json > matches job 1`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    {
      "content": "{}",
      Symbol(workelement.slugify): [Function],
    },
  ],
}
`;

exports[`jobutil > json > matches job 2`] = `
WorkElement {
  "__handle": [Function],
  "__input": [
    {
      "content": "[]",
      Symbol(workelement.slugify): [Function],
    },
  ],
}
`;

exports[`jobutil > source 1`] = `
SlugBase {
  Symbol(workelement.slug): "source(md5#mZFLkyvTelC5g8XnyQrpOw)",
}
`;
